[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "netdiag"
version = "1.1.0"
description = "Network Diagnostics Toolkit untuk educational purposes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Satria Divo", email = "satriadivo@gmail.com"},
]
keywords = ["network", "diagnostics", "ping", "traceroute", "dns", "port-scan", "educational"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
test = ["pytest"]

[project.urls]
"Bug Reports" = "https://github.com/SatriaDivo/netdiag/issues"
"Source" = "https://github.com/SatriaDivo/netdiag"
"Documentation" = "https://github.com/SatriaDivo/netdiag/blob/main/README.md"

[project.scripts]
netdiag = "netdiag.__main__:main"

[tool.setuptools]
packages = ["netdiag"]

[tool.setuptools.package-data]
netdiag = ["*.md", "*.txt"]

# Code Quality Tools Configuration
[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["netdiag"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools_scm]
write_to = "netdiag/_version.py"